# mcp-sentinel

./: .dockerignore  .env.example  .gitignore  .semgrep.yml  Dockerfile  Makefile  README.md  bridge_app.py  capability_registry.py  client_manager.py  config_loader.py  errors.py  example_config.json  example_config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker-hub.yml  docker.yml  publish-ghcr.yml  publish.yml  release.yml  security.yml
argus_mcp/: __init__.py  __main__.py  cli.py  constants.py  errors.py  sessions.py
argus_mcp/audit/: __init__.py  logger.py
argus_mcp/bridge/: __init__.py  capability_registry.py  client_manager.py  conflict.py  forwarder.py  groups.py  rename.py  version_checker.py
argus_mcp/bridge/auth/: __init__.py  provider.py
argus_mcp/bridge/health/: __init__.py  checker.py
argus_mcp/bridge/middleware/: __init__.py  audit.py  auth.py  authz.py  recovery.py  routing.py  telemetry.py
argus_mcp/bridge/optimizer/: __init__.py  meta_tools.py  search.py
argus_mcp/config/: __init__.py  client_gen.py  flags.py  loader.py  migration.py  schema.py  schema_backends.py  schema_client.py  schema_registry.py  schema_server.py  watcher.py
argus_mcp/display/: __init__.py  console.py  logging_config.py
argus_mcp/registry/: __init__.py  cache.py  client.py  models.py
argus_mcp/runtime/: __init__.py  models.py  service.py
argus_mcp/secrets/: __init__.py  providers.py  resolver.py  store.py
argus_mcp/server/: __init__.py  app.py  handlers.py  lifespan.py  transport.py
argus_mcp/server/auth/: __init__.py  jwt.py  providers.py
argus_mcp/server/authz/: __init__.py  engine.py  policies.py
argus_mcp/server/management/: __init__.py  auth.py  router.py  schemas.py
argus_mcp/server/session/: __init__.py  manager.py  models.py
argus_mcp/skills/: __init__.py  manager.py
argus_mcp/telemetry/: __init__.py  config.py  metrics.py  tracing.py
argus_mcp/tui/: __init__.py  _dev_launch.py  api_client.py  app.py  argus.tcss  events.py  server_manager.py  settings.py
argus_mcp/tui/screens/: __init__.py  audit_log.py  base.py  client_config.py  dashboard.py  elicitation.py  exit_modal.py  health.py  operations.py  registry.py  security.py  server_detail.py  settings.py  skills.py  theme_picker.py  tool_editor.py  tools.py
argus_mcp/tui/widgets/: __init__.py  elicitation_form.py  event_log.py  filter_toggle.py  install_panel.py  optimizer_panel.py  registry_browser.py  server_info.py  server_selector.py  sync_status.py  version_badge.py  version_drift.py  workflows_panel.py
argus_mcp/workflows/: __init__.py  composite_tool.py  dsl.py  executor.py  steps.py
docs/: README.md  audit.md  configuration.md  docker.md  getting-started.md  middleware.md  skills.md  toolhive-analysis.md
docs/api/: README.md  endpoints.md
docs/architecture/: 00-overview.md  01-server.md  02-bridge.md  03-config.md  04-runtime.md
docs/cli/: README.md  secret.md  server.md  tui.md
docs/optimizer/: README.md
docs/plan/: 2026-02-21-deep-audit-mcp-sentinel.md
docs/plan/server-client/: 2026-02-21-development-prompt.md  2026-02-21-implementation-plan.md  2026-02-21-research.md
docs/plan/toolhive-improvements/: 00-overview.md  additional-features.md  development-roadmap.md  tui-layout-analysis.md
docs/registry/: README.md
docs/security/: README.md  authentication.md  authorization.md  outgoing-auth.md  secrets.md
docs/skills/: README.md
docs/sync/: README.md
docs/tui/: README.md  screens.md
docs/workflows/: README.md
examples/skills/: README.md
examples/skills/code-search/: README.md  manifest.json
examples/skills/github-integration/: README.md  manifest.json
examples/workflows/: README.md  data-pipeline.yaml  multi-tool-analysis.yaml
mcp_gateway/: __init__.py  __main__.py  cli.py  constants.py  errors.py
mcp_gateway/bridge/: __init__.py  capability_registry.py  client_manager.py  forwarder.py
mcp_gateway/config/: __init__.py  loader.py
mcp_gateway/display/: __init__.py  console.py  logging_config.py
mcp_gateway/server/: __init__.py  app.py  handlers.py  lifespan.py  transport.py
mcp_gateway/tui/: __init__.py  _dev_launch.py  app.py  events.py  gateway.tcss
mcp_gateway/tui/screens/: __init__.py  theme_picker.py
mcp_gateway/tui/widgets/: __init__.py  backend_status.py  capability_tables.py  event_log.py  server_info.py
mcp_sentinel/: __init__.py  __main__.py  cli.py  constants.py  errors.py  sessions.py
mcp_sentinel/audit/: __init__.py  logger.py  models.py
mcp_sentinel/bridge/: __init__.py  capability_registry.py  client_manager.py  conflict.py  elicitation.py  filter.py  forwarder.py  groups.py
mcp_sentinel/bridge/auth/: __init__.py  provider.py  token_cache.py
mcp_sentinel/bridge/health/: __init__.py  checker.py  circuit_breaker.py
mcp_sentinel/bridge/middleware/: __init__.py  audit.py  auth.py  authz.py  chain.py  recovery.py  routing.py  (+1 more)
mcp_sentinel/config/: __init__.py  client_gen.py  diff.py  flags.py  loader.py  schema.py  schema_backends.py  schema_client.py  schema_security.py  schema_server.py
mcp_sentinel/display/: __init__.py  console.py  installer.py  logging_config.py
mcp_sentinel/registry/: __init__.py  cache.py  client.py  models.py
mcp_sentinel/runtime/: __init__.py  models.py  service.py
mcp_sentinel/secrets/: __init__.py  providers.py  resolver.py  store.py
mcp_sentinel/server/: __init__.py  app.py  handlers.py  lifespan.py  transport.py
mcp_sentinel/skills/: __init__.py  manager.py  manifest.py
mcp_sentinel/telemetry/: __init__.py  config.py  metrics.py  tracing.py
mcp_sentinel/tui/: __init__.py  _dev_launch.py  api_client.py  app.py  events.py  sentinel.tcss  server_manager.py  settings.py
mcp_sentinel/workflows/: __init__.py  composite_tool.py  dsl.py  executor.py
mods/: sse_test_server.py  stdio_test_server.py
reports/: audit-session2-20260228.md
tests/: test_auth.py  test_config_hotreload.py  test_flags_yaml_clientgen.py  test_optimizer.py  test_phase4_security.py  test_phase5_advanced.py  test_registry.py  test_session.py  test_sessions.py  test_wiring.py
(+81 files in other folders)
