[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-mcp"
version = "0.6.0"
description = "A central server for aggregating MCP server capabilities via SSE"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Daniel Diaz Santiago" }]
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "starlette>=0.47.2",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "textual>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["argus_mcp*"]

[project.scripts]
argus-mcp = "argus_mcp.cli:main"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "mypy>=1.17.1",
    "ruff>=0.14.13",
    "textual-dev>=1.0.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.ruff_cache
  | logs
  | img
  | internal
  | memory-bank
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "logs",
    "img",
    "internal",
    "memory-bank",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_phase5_advanced.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = [
    "argus_mcp/",
    "mods/*.py",
]
exclude = "(^logs/|^img/|^internal/|^memory-bank/|^\\.venv/|^__pycache__/)"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]

[[tool.mypy.overrides]]
module = ["argus_mcp.server.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["argus_mcp.bridge.client_manager"]
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = ["argus_mcp.bridge.capability_registry"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["argus_mcp.tui.*"]
ignore_errors = true

# ── python-semantic-release ──────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["argus_mcp/constants.py:SERVER_VERSION"]
commit_message = "release: v{version}"
tag_format = "v{version}"
major_on_zero = false
build_command = "echo 'skip build'"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = false
